reference/5.1/Microsoft.PowerShell.Management/Move-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/move-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Move-ItemProperty
ms.openlocfilehash: 4cf883964e1ff86487bf5abca8789af62b274c8a
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93203598"
---
# <span data-ttu-id="444cb-103">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-103">Move-ItemProperty</span></span>

## <span data-ttu-id="444cb-104">Synopsis</span><span class="sxs-lookup"><span data-stu-id="444cb-104">Synopsis</span></span>
<span data-ttu-id="444cb-105">Déplace une propriété d'un emplacement à un autre.</span><span class="sxs-lookup"><span data-stu-id="444cb-105">Moves a property from one location to another.</span></span>

## <span data-ttu-id="444cb-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="444cb-106">SYNTAX</span></span>

### <span data-ttu-id="444cb-107">Chemin d’accès (par défaut)</span><span class="sxs-lookup"><span data-stu-id="444cb-107">Path (Default)</span></span>

```
Move-ItemProperty [-Path] <String[]> [-Name] <String[]> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="444cb-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="444cb-108">LiteralPath</span></span>

```
Move-ItemProperty -LiteralPath <String[]> [-Name] <String[]> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="444cb-109">Description</span><span class="sxs-lookup"><span data-stu-id="444cb-109">Description</span></span>

<span data-ttu-id="444cb-110">L' `Move-ItemProperty` applet de commande déplace une propriété d’un élément d’un élément à un autre.</span><span class="sxs-lookup"><span data-stu-id="444cb-110">The `Move-ItemProperty` cmdlet moves a property of an item from one item to another item.</span></span>
<span data-ttu-id="444cb-111">Par exemple, il peut déplacer une entrée de registre d’une clé de Registre vers une autre clé de registre.</span><span class="sxs-lookup"><span data-stu-id="444cb-111">For instance, it can move a registry entry from one registry key to another registry key.</span></span>
<span data-ttu-id="444cb-112">Lors du déplacement d’une propriété d’élément, celle-ci est ajoutée au nouvel emplacement et supprimée de l’emplacement d’origine.</span><span class="sxs-lookup"><span data-stu-id="444cb-112">When you move an item property, it is added to the new location and deleted from its original location.</span></span>

## <span data-ttu-id="444cb-113">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="444cb-113">EXAMPLES</span></span>

### <span data-ttu-id="444cb-114">Exemple 1 : déplacer une valeur de Registre et ses données vers une autre clé</span><span class="sxs-lookup"><span data-stu-id="444cb-114">Example 1: Move a registry value and its data to another key</span></span>

<span data-ttu-id="444cb-115">Cette commande déplace la valeur de registre de la version, ainsi que ses données, de la sous-clé « MyApp » vers la sous-clé NewApp de la `HKLM\Software\MyCompany` clé de registre.</span><span class="sxs-lookup"><span data-stu-id="444cb-115">This command moves the Version registry value, and its data, from the "MyApp" subkey to the NewApp subkey of the `HKLM\Software\MyCompany` registry key.</span></span>

```powershell
Move-ItemProperty "HKLM:\Software\MyCompany\MyApp" -Name "Version" -Destination "HKLM:\Software\MyCompany\NewApp"
```

## <span data-ttu-id="444cb-116">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="444cb-116">PARAMETERS</span></span>

### <span data-ttu-id="444cb-117">-Credential</span><span class="sxs-lookup"><span data-stu-id="444cb-117">-Credential</span></span>

> [!NOTE]
> <span data-ttu-id="444cb-118">Ce paramètre n’est pas pris en charge par les fournisseurs installés avec PowerShell.</span><span class="sxs-lookup"><span data-stu-id="444cb-118">This parameter is not supported by any providers installed with PowerShell.</span></span>
> <span data-ttu-id="444cb-119">Pour emprunter l’identité d’un autre utilisateur ou élever vos informations d’identification lors de l’exécution de cette applet de commande, utilisez [Invoke-Command](../Microsoft.PowerShell.Core/Invoke-Command.md).</span><span class="sxs-lookup"><span data-stu-id="444cb-119">To impersonate another user, or elevate your credentials when running this cmdlet, use [Invoke-Command](../Microsoft.PowerShell.Core/Invoke-Command.md).</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-120">-Destination</span><span class="sxs-lookup"><span data-stu-id="444cb-120">-Destination</span></span>

<span data-ttu-id="444cb-121">Spécifie le chemin d'accès à l'emplacement de destination.</span><span class="sxs-lookup"><span data-stu-id="444cb-121">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-122">-Exclude</span><span class="sxs-lookup"><span data-stu-id="444cb-122">-Exclude</span></span>

<span data-ttu-id="444cb-123">Spécifie, sous la forme d’un tableau de chaînes, une propriété ou une propriété que cette applet de commande exclut de l’opération.</span><span class="sxs-lookup"><span data-stu-id="444cb-123">Specifies, as a string array, a property or property that this cmdlet excludes from the operation.</span></span>
<span data-ttu-id="444cb-124">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="444cb-124">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="444cb-125">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="444cb-125">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="444cb-126">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="444cb-126">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="444cb-127">-Filter</span><span class="sxs-lookup"><span data-stu-id="444cb-127">-Filter</span></span>

<span data-ttu-id="444cb-128">Spécifie un filtre dans le format ou la langue du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="444cb-128">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="444cb-129">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="444cb-129">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="444cb-130">La syntaxe du filtre, notamment l’utilisation de caractères génériques, dépend du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="444cb-130">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="444cb-131">Les filtres sont plus efficaces que les autres paramètres, car le fournisseur les applique lorsque l’applet de commande obtient les objets au lieu de faire en sorte que PowerShell filtre les objets une fois qu’ils ont été récupérés.</span><span class="sxs-lookup"><span data-stu-id="444cb-131">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="444cb-132">-Force</span><span class="sxs-lookup"><span data-stu-id="444cb-132">-Force</span></span>

<span data-ttu-id="444cb-133">Force l’exécution de la commande sans demander la confirmation de l’utilisateur.</span><span class="sxs-lookup"><span data-stu-id="444cb-133">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="444cb-134">L'implémentation est différente d'un fournisseur à l'autre.</span><span class="sxs-lookup"><span data-stu-id="444cb-134">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="444cb-135">Pour plus d'informations, consultez [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="444cb-135">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-136">-Include</span><span class="sxs-lookup"><span data-stu-id="444cb-136">-Include</span></span>

<span data-ttu-id="444cb-137">Spécifie, sous la forme d’un tableau de chaînes, une propriété ou une propriété que cette applet de commande comprend dans l’opération.</span><span class="sxs-lookup"><span data-stu-id="444cb-137">Specifies, as a string array, a property or property that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="444cb-138">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="444cb-138">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="444cb-139">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="444cb-139">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="444cb-140">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="444cb-140">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="444cb-141">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="444cb-141">-LiteralPath</span></span>

<span data-ttu-id="444cb-142">Spécifie le chemin d’accès à l’emplacement actuel de la propriété.</span><span class="sxs-lookup"><span data-stu-id="444cb-142">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="444cb-143">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle que vous la tapez.</span><span class="sxs-lookup"><span data-stu-id="444cb-143">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="444cb-144">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="444cb-144">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="444cb-145">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="444cb-145">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="444cb-146">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="444cb-146">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-147">-Name</span><span class="sxs-lookup"><span data-stu-id="444cb-147">-Name</span></span>

<span data-ttu-id="444cb-148">Spécifie le nom de la propriété à déplacer.</span><span class="sxs-lookup"><span data-stu-id="444cb-148">Specifies the name of the property to be moved.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-149">-PassThru</span><span class="sxs-lookup"><span data-stu-id="444cb-149">-PassThru</span></span>

<span data-ttu-id="444cb-150">Retourne un objet représentant l’élément que vous utilisez.</span><span class="sxs-lookup"><span data-stu-id="444cb-150">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="444cb-151">Par défaut, cette applet de commande ne génère aucun résultat.</span><span class="sxs-lookup"><span data-stu-id="444cb-151">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-152">-Path</span><span class="sxs-lookup"><span data-stu-id="444cb-152">-Path</span></span>

<span data-ttu-id="444cb-153">Spécifie le chemin d’accès à l’emplacement actuel de la propriété.</span><span class="sxs-lookup"><span data-stu-id="444cb-153">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="444cb-154">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="444cb-154">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="444cb-155">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="444cb-155">-UseTransaction</span></span>

<span data-ttu-id="444cb-156">Inclut la commande dans la transaction active.</span><span class="sxs-lookup"><span data-stu-id="444cb-156">Includes the command in the active transaction.</span></span>
<span data-ttu-id="444cb-157">Ce paramètre est uniquement valide au cours d’une transaction.</span><span class="sxs-lookup"><span data-stu-id="444cb-157">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="444cb-158">Pour plus d'informations, consultez about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="444cb-158">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-159">-Confirm</span><span class="sxs-lookup"><span data-stu-id="444cb-159">-Confirm</span></span>

<span data-ttu-id="444cb-160">Vous demande une confirmation avant d’exécuter l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="444cb-160">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-161">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="444cb-161">-WhatIf</span></span>

<span data-ttu-id="444cb-162">Montre ce qui se passe en cas d’exécution de l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="444cb-162">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="444cb-163">L’applet de commande n’est pas exécutée.</span><span class="sxs-lookup"><span data-stu-id="444cb-163">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="444cb-164">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="444cb-164">CommonParameters</span></span>

<span data-ttu-id="444cb-165">Cette applet de commande prend en charge les paramètres communs : `-Debug` , `-ErrorAction` ,, `-ErrorVariable` `-InformationAction` , `-InformationVariable` , `-OutVariable` , `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` et `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="444cb-165">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="444cb-166">Pour plus d’informations, consultez [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="444cb-166">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="444cb-167">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="444cb-167">INPUTS</span></span>

### <span data-ttu-id="444cb-168">System.String</span><span class="sxs-lookup"><span data-stu-id="444cb-168">System.String</span></span>

<span data-ttu-id="444cb-169">Vous pouvez diriger une chaîne qui contient un chemin d’accès vers cette applet de commande.</span><span class="sxs-lookup"><span data-stu-id="444cb-169">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="444cb-170">SORTIES</span><span class="sxs-lookup"><span data-stu-id="444cb-170">OUTPUTS</span></span>

### <span data-ttu-id="444cb-171">None ou System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="444cb-171">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="444cb-172">Quand vous utilisez le paramètre **PassThru** , cette applet de commande génère un **PSCustomObject** représentant la propriété d’élément déplacée.</span><span class="sxs-lookup"><span data-stu-id="444cb-172">When you use the **PassThru** parameter, this cmdlet generates a **PSCustomObject** representing the moved item property.</span></span>
<span data-ttu-id="444cb-173">Sinon, cette applet de commande ne génère aucune sortie.</span><span class="sxs-lookup"><span data-stu-id="444cb-173">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="444cb-174">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="444cb-174">NOTES</span></span>

<span data-ttu-id="444cb-175">Cette applet de commande est conçue pour utiliser les données exposées par n’importe quel fournisseur.</span><span class="sxs-lookup"><span data-stu-id="444cb-175">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="444cb-176">Pour répertorier les fournisseurs disponibles dans votre session, tapez `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="444cb-176">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="444cb-177">Pour plus d'informations, consultez [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="444cb-177">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="444cb-178">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="444cb-178">RELATED LINKS</span></span>

[<span data-ttu-id="444cb-179">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-179">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="444cb-180">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-180">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="444cb-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="444cb-182">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-182">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="444cb-183">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-183">Remove-ItemProperty</span></span>](Remove-ItemProperty.md)

[<span data-ttu-id="444cb-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="444cb-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="444cb-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="444cb-186">about_Providers</span><span class="sxs-lookup"><span data-stu-id="444cb-186">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)
